--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^5.10.9",
+    "mongoose": "^6.0.0",  // Updated mongoose to the latest version
     "concurrently": "^6.0.0"
   },
   "devDependencies": {
